--- a/events.htm
+++ b/events.htm
@@ -4,10 +4,7 @@ title: Tech Events in Hoboken
 ---
 
 Calendar of events (via Meetup API)
-<head>
-  script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
   <script src="javascript/meetup.js" type="text/javascript"></script>
-</head>
-<body>
-  <div id="calendar"></div>
-</body>
+<div id="calendar"></div>
