--- a/events.htm
+++ b/events.htm
@@ -7,5 +7,5 @@ Calendar of events (via Meetup API)
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
 <script src="javascript/meetup.js" type="text/javascript"></script>
-<style type="text/css">@import "css/events.css";</style>
+<link type="text/css" rel="stylesheet" href="css/events.css"></link>;
 <div id="calendar"></div>
