initial commit of foundation framework and css

--- a/index.htm
+++ b/index.htm
@@ -3,4 +3,21 @@ layout: default
 title: Home
 ---
 
-Just copy and images
+<div class="row">
+    <div class="eight columns centered">
+		<p>Bacon ipsum dolor sit amet chuck pancetta shoulder, boudin pork chop pig prosciutto jowl kielbasa strip steak tongue spare ribs tenderloin. Frankfurter drumstick strip steak bresaola, swine short ribs kielbasa ball tip ham corned beef ham hock tenderloin. Tail beef ribs shank ham hock pork corned beef frankfurter turducken tri-tip. Pork chop beef short ribs pork loin frankfurter shankle.</p>
+    </div>
+</div>
+
+<div class="row">
+	<div class="four columns">
+		<img src="images/placeholder1.jpeg">
+	</div>
+	<div class="four columns">
+		<img src="images/placeholder2.jpeg">
+	</div>
+	<div class="four columns">
+		<img src="images/placeholder3.jpeg">
+	</div>
+</div>
+
