Added logos for tech groups.

--- a/groups.htm
+++ b/groups.htm
@@ -3,7 +3,9 @@ layout: default
 title: Hoboken's Tech Groups
 ---
 
-<a href="http://makerbar.com">MakerBar</a><br>
-<a href="http://njtech.me">NJ Tech Meetup</a><br>
-<a href="http://mobiledevnj.com">MobileDevNJ</a><br>
-Spark Lab
+<div id="groups">
+  <a href="http://makerbar.com"><img src="images/makerbar.png" alt="MakerBar"/></a>
+  <a href="http://njtech.me"><img src="images/njtechmeetup.jpeg" alt="NJ Tech Meetup"/></a>
+  <a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
+  Spark Lab
+</div>
