styled groups page

--- a/groups.htm
+++ b/groups.htm
@@ -3,9 +3,35 @@ layout: default
 title: Hoboken's Tech Groups
 ---
 
-<div id="groups">
-  <a href="http://makerbar.com"><img src="images/makerbar.png" alt="MakerBar"/></a>
-  <a href="http://njtech.me"><img src="images/njtechmeetup.jpeg" alt="NJ Tech Meetup"/></a>
-  <a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
-  Spark Lab
-</div>
+
+<div class="row">
+    <div class="twelve columns centered groups">
+    	<div class="row">
+			<section class="five columns groups-member">
+				<h2>MakerBar</h2>
+				<a href="http://makerbar.com"><img src="images/makerbar.png" alt="MakerBar"/></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns groups-member">
+				<h2>NJ Tech Meetup</h2>
+				<a href="http://njtech.me"><img src="images/njtechmeetup.jpeg" alt="NJ Tech Meetup"/></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+	   <div class="row">
+			<section class="five columns groups-member">
+				<h2>Mobile Dev NJ</h2>
+				<a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns groups-member">
+				<h2>Spark Lab</h2>
+				<a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+    </div><!-- end columns-->
+</div><!-- end row -->
