styled events and who to work with pages

--- a/groups.htm
+++ b/groups.htm
@@ -5,15 +5,15 @@ title: Hoboken's Tech Groups
 
 
 <div class="row">
-    <div class="twelve columns centered groups">
+    <div class="twelve columns groups">
     	<div class="row">
-			<section class="five columns groups-member">
+			<section class="five columns offset-by-one groups-member">
 				<h2>MakerBar</h2>
 				<a href="http://makerbar.com"><img src="images/makerbar.png" alt="MakerBar"/></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
 			</section>
 
-			<section class="five columns groups-member">
+			<section class="five columns offset-by-one groups-member">
 				<h2>NJ Tech Meetup</h2>
 				<a href="http://njtech.me"><img src="images/njtechmeetup.jpeg" alt="NJ Tech Meetup"/></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
@@ -21,13 +21,13 @@ title: Hoboken's Tech Groups
 		</div><!-- end row -->
 
 	   <div class="row">
-			<section class="five columns groups-member">
+			<section class="five columns offset-by-one groups-member">
 				<h2>Mobile Dev NJ</h2>
 				<a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
 			</section>
 
-			<section class="five columns groups-member">
+			<section class="five columns offset-by-one groups-member">
 				<h2>Spark Lab</h2>
 				<a href="http://mobiledevnj.com"><img src="images/mobiledevnj.png" alt="MobileDevNJ"/></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
