--- a/working.htm
+++ b/working.htm
@@ -3,8 +3,159 @@ layout: default
 title: Who to Work With
 ---
 
-<h2>Development</h2>
-<a href="http://ploonky.com">Ploonky</a><br>
-<a href="http://320ny.com/">320ny</a><br>
-<h2>Design</h2>
-<a href="http://tishacreative.com">Tisha Creative</a><br>
+<div class="row">
+    <div class="twelve columns groups">
+
+		<div class="row">
+		    <div class="nine columns centered work-with">
+		    	<ul>
+		    		<a href="#startups">
+		    			<li>
+		    				<img src="images/startups.png">
+		    				<br><h3>Startups</h3>
+		    			</li>
+		    		</a>
+		    		<a href="#coders">
+		    			<li>
+		    				<img src="images/programmer.png">
+		    				<br><h3>Coders</h3>
+		    			</li>
+		    		</a>
+		    		<a href="#space">
+		    			<li>
+		    				<img src="images/office-space.png">
+		    				<br><h3>Space</h3>
+		    			</li>
+		    		</a>
+		    		<a href="#tech">
+		    			<li>
+		    				<img src="images/tech-companies.png">
+		    				<br><h3>Tech Co's</h3>
+		    			</li>
+		    		</a>
+		    	</ul>
+			</div><!-- end columns-->
+		</div><!-- end row -->
+
+		<!--
+
+		STARTUPS SECTION
+
+		-->
+
+		<div class="row" id="startups">
+		    <div class="twelve columns work-with-headers">
+		    	<span>
+		    		<h1>Startups</h1>
+		    	</span>
+		    </div><!-- end columns-->
+		</div><!-- end row -->
+
+    	<div class="row">
+			<section class="five columns offset-by-one groups-member">
+				<h2>320ny</h2>
+				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns offset-by-one groups-member">
+				<h2>Ploonky</h2>
+				<a href="http://ploonky.com" target="_blank"><img src="images/ploonky-small.png" alt="ploonky" title="ploonky"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+		<!--
+
+		CODERS SECTION
+
+		-->
+
+		<div class="row" id="coders">
+		    <div class="twelve columns work-with-headers">
+		    	<span>
+		    		<h1>Coders</h1>
+		    	</span>
+		    </div><!-- end columns-->
+		</div><!-- end row -->
+
+    	<div class="row">
+			<section class="five columns offset-by-one groups-member">
+				<h2>320ny</h2>
+				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns offset-by-one groups-member">
+				<h2>Ploonky</h2>
+				<a href="http://ploonky.com" target="_blank"><img src="images/ploonky-small.png" alt="ploonky" title="ploonky"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+	    <div class="row">
+			<section class="five columns offset-by-one groups-member">
+				<h2>Tisha Creative</h2>
+				<a href="http://tishacreative.com" target="_blank"><img src="images/tisha-small.png" alt="Tisha Creative" title="Tisha Creative"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+		<!--
+
+		OFFICE SPACE SECTION
+
+		-->
+
+		<div class="row" id="space">
+		    <div class="twelve columns work-with-headers">
+		    	<span>
+		    		<h1>Space</h1>
+		    	</span>
+		    </div><!-- end columns-->
+		</div><!-- end row -->
+
+    	<div class="row">
+			<section class="five columns offset-by-one groups-member">
+				<h2>320ny</h2>
+				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns offset-by-one groups-member">
+				<h2>Ploonky</h2>
+				<a href="http://ploonky.com" target="_blank"><img src="images/ploonky-small.png" alt="ploonky" title="ploonky"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+		<!--
+
+		TECH CO'S SECTION
+
+		-->
+
+		<div class="row"  id="tech">
+		    <div class="twelve columns work-with-headers">
+		    	<span>
+		    		<h1>Tech Co's</h1>
+		    	</span>
+		    </div><!-- end columns-->
+		</div><!-- end row -->
+
+    	<div class="row">
+			<section class="five columns offset-by-one groups-member">
+				<h2>320ny</h2>
+				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+
+			<section class="five columns offset-by-one groups-member">
+				<h2>Ploonky</h2>
+				<a href="http://ploonky.com" target="_blank"><img src="images/ploonky-small.png" alt="ploonky" title="ploonky"></a>
+				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
+			</section>
+		</div><!-- end row -->
+
+    </div><!-- end columns-->
+</div><!-- end row -->
