--- a/events.htm
+++ b/events.htm
@@ -5,5 +5,9 @@ title: Tech Events in Hoboken
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
 <script src="javascript/meetup.js" type="text/javascript"></script>
-<link type="text/css" rel="stylesheet" href="css/events.css"></link>;
-<div id="calendar"></div>
+
+<div class="row">
+    	<div class="twelve columns offset-by-one centered">
+			<div id="calendar"></div>
+		</div><!-- end columns-->
+</div><!-- end row -->
