made site fixed width stable on mobile and tablet

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@ title: Home
     </div>
 </div>
 
-<div class="row">
+<div class="row home-images clearfix">
 	<div class="four columns">
 		<img src="images/placeholder1.jpeg">
 	</div>
