--- a/working.htm
+++ b/working.htm
@@ -6,9 +6,7 @@ title: Who to Work With
 <div class="row">
     <div class="twelve columns groups">
 
-		<div class="row">
-		    <div class="nine columns centered work-with">
-		    	<ul>
+		    	<ul class="work-with">
 		    		<a href="#startups">
 		    			<li>
 		    				<img src="images/startups.png">
@@ -34,8 +32,6 @@ title: Who to Work With
 		    			</li>
 		    		</a>
 		    	</ul>
-			</div><!-- end columns-->
-		</div><!-- end row -->
 
 		<!--
 
@@ -52,7 +48,7 @@ title: Who to Work With
 		</div><!-- end row -->
 
     	<div class="row">
-			<section class="five columns offset-by-one groups-member">
+			<section class="five columns groups-member">
 				<h2>320ny</h2>
 				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
@@ -80,7 +76,7 @@ title: Who to Work With
 		</div><!-- end row -->
 
     	<div class="row">
-			<section class="five columns offset-by-one groups-member">
+			<section class="five columns groups-member">
 				<h2>320ny</h2>
 				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
@@ -94,7 +90,7 @@ title: Who to Work With
 		</div><!-- end row -->
 
 	    <div class="row">
-			<section class="five columns offset-by-one groups-member">
+			<section class="five columns groups-member">
 				<h2>Tisha Creative</h2>
 				<a href="http://tishacreative.com" target="_blank"><img src="images/tisha-small.png" alt="Tisha Creative" title="Tisha Creative"></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
@@ -116,7 +112,7 @@ title: Who to Work With
 		</div><!-- end row -->
 
     	<div class="row">
-			<section class="five columns offset-by-one groups-member">
+			<section class="five columns groups-member">
 				<h2>320ny</h2>
 				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
@@ -144,7 +140,7 @@ title: Who to Work With
 		</div><!-- end row -->
 
     	<div class="row">
-			<section class="five columns offset-by-one groups-member">
+			<section class="five columns groups-member">
 				<h2>320ny</h2>
 				<a href="http://320ny.com/" target="_blank"><img src="images/320ny-small.png" alt="320ny" title="320ny"></a>
 				<p>Drumstick tri-tip chuck short ribs shoulder swine biltong tongue frankfurter boudin beef ribs ball tip prosciutto. Shankle filet mignon swine, short loin hamburger jerky shank ham sausage salami.</p>
