fixing stlyes for tablets and mobile

--- a/working.htm
+++ b/working.htm
@@ -3,35 +3,35 @@ layout: default
 title: Who to Work With
 ---
 
-<div class="row">
+<div class="row work-with-wrapper">
     <div class="twelve columns groups">
 
-		    	<ul class="work-with">
-		    		<a href="#startups">
-		    			<li>
-		    				<img src="images/startups.png">
-		    				<br><h3>Startups</h3>
-		    			</li>
-		    		</a>
-		    		<a href="#coders">
-		    			<li>
-		    				<img src="images/programmer.png">
-		    				<br><h3>Coders</h3>
-		    			</li>
-		    		</a>
-		    		<a href="#space">
-		    			<li>
-		    				<img src="images/office-space.png">
-		    				<br><h3>Space</h3>
-		    			</li>
-		    		</a>
-		    		<a href="#tech">
-		    			<li>
-		    				<img src="images/tech-companies.png">
-		    				<br><h3>Tech Co's</h3>
-		    			</li>
-		    		</a>
-		    	</ul>
+    	<ul class="work-with">
+    		<a href="#startups">
+    			<li>
+    				<img src="images/startups.png">
+    				<br><h3>Startups</h3>
+    			</li>
+    		</a>
+    		<a href="#coders">
+    			<li>
+    				<img src="images/programmer.png">
+    				<br><h3>Coders</h3>
+    			</li>
+    		</a>
+    		<a href="#space">
+    			<li>
+    				<img src="images/office-space.png">
+    				<br><h3>Space</h3>
+    			</li>
+    		</a>
+    		<a href="#tech">
+    			<li>
+    				<img src="images/tech-companies.png">
+    				<br><h3>Tech Co's</h3>
+    			</li>
+    		</a>
+    	</ul>
 
 		<!--
 
