fixed stupid grid issue on events page finally

--- a/events.htm
+++ b/events.htm
@@ -7,7 +7,7 @@ title: Tech Events in Hoboken
 <script src="javascript/meetup.js" type="text/javascript"></script>
 
 <div class="row">
-    	<div class="twelve columns offset-by-one centered">
+    	<div class="twelve columns">
 			<div id="calendar"></div>
 		</div><!-- end columns-->
 </div><!-- end row -->
